[package]
name = "pulse-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "CLI for syncing and visualising health data from Garmin Connect and Intervals.icu"
keywords = ["health", "garmin", "cli", "fitness", "wearable"]
categories = ["command-line-utilities"]

[dependencies]
pulse-health-core = { path = "../pulse-core", version = "0.1.5" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
toml = "1"
rpassword = "7"

[[bin]]
name = "pulse"
path = "src/main.rs"
