[package]
name = "pulse-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json", "cookies"] }
anyhow = "1"
dirs = "6"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
url = "2"
rand = "0.9"
regex = "1"
