[package]
name = "pulse-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.38", features = ["bundled"] }
reqwest = { version = "0.13", features = ["blocking", "json", "cookies", "query", "form"] }
anyhow = "1"
dirs = "6"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
url = "2"
rand = "0.10"
regex = "1"
