[package]
name = "pulse-health-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core library for syncing and scoring health data from Garmin Connect and Intervals.icu"
keywords = ["health", "garmin", "fitness", "vitality", "wearable"]
categories = ["command-line-utilities", "database"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13", features = ["blocking", "json", "cookies", "query", "form"] }
anyhow = "1"
dirs = "6"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
url = "2"
rand = "0.10"
regex = "1"
